--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Cache-Control" content="no-cache">
     <title>Repcode: Исправление ошибок в ПКП</title>
-    <!--
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-    -->
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="style/default.css">
     <link rel="stylesheet" type="text/css" href="style/index.css">
@@ -52,7 +50,7 @@
                 <div class="window_body_part" id="result">
                     <div id="statistic">
                         <p>Всего вариантов: <span name="all"></span></p>
-                        <p>Исправленно: <span name="success"></span></p>
+                        <p>Исправлено: <span name="success"></span></p>
                     </div>
                     <div id="intable">
                         <table id="options"></table>
